--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .scroll-s-cypress::-webkit-scrollbar {
+    width: 7px; /* 指定滚动条宽度 */
+  }
+
+  .scroll-s-cypress::-webkit-scrollbar-track {
+    background-color: #f1f1f1; /* 指定滚动条背景颜色 */
+  }
+
+  .scroll-s-cypress::-webkit-scrollbar-thumb {
+    background-color: #c0c0c0; /* 指定滚动条颜色 */
+    border-radius: 4px; /* 指定滚动条圆角半径 */
+  }
+
+  .scroll-s-cypress::-webkit-scrollbar-thumb:hover {
+    background-color: #a7a7a7;
+  }
+}
